@@ -4,6 +4,10 @@ Revision history for autodie
           autodie::exception objects.  Thanks to Piers Harding
           for spotting this bug at KiwiFoo.
 
+        * TEST: Added tests for user-defined autodying functions
+          changing behaviour depending upon context.  This was
+          reported in http://perlmonks.org/?node_id=744246 .
+
 1.998 Sat Jan  3 11:19:53 AUSEDT 2009
 
         * BUILD: Removed Module::AutoInstall, which previously
